--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "express": "^4.19.2",
     "socket.io": "^4.7.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^22.5.4"
+    "@types/node": "^22.5.4",
+    "@types/uuid": "^10.0.0"
   }
 }
