--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "socket.io",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "server",
-  "main": "server.ts",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "stage": "tsc && git status && git add . "
+     "build": "tsc",
+    "start": "node dist/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Shashank",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "socket.io": "^4.7.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4",
-    "uuid": "^10.0.0"
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
-    "@types/uuid": "^10.0.0"
+    "@types/socket.io": "^3.0.1",
+    "typescript": "^5.5.4"
   }
 }
