--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "backend",
+  "name": "scribble",
   "version": "1.0.0",
-  "description": "server",
-  "main": "server.ts",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-     "build": "tsc",
+    "build": "tsc",
     "start": "node dist/server.js",
+    "dev": "ts-node src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,14 +13,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "express": "^4.20.0",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
     "@types/socket.io": "^3.0.1",
-    "typescript": "^5.5.4"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
